# prlite-pc

./: .gitignore  485.launch  50-magellan.rules  60-pr2lite-usb.rules  LICENSE  alan-readme.txt  dependencies  motors.txt  prlite.rosinstall  stack.xml  uc.txt  yourmom.sh
catkin/imu_um6/: CMakeLists.txt  autosetup.diff  package.xml  setup.py  test.launch
catkin/pr2lite_actuators/: mainpage.dox  package.xml
catkin/pr2lite_actuators/config/: pr2lite_actuators.yaml~
catkin/pr2lite_actuators/launch/: linact_server.launch  pr2lite_kill
catkin/pr2lite_actuators/src/: linact_server.cpp  linact_type_dynamixel.cpp  linact_type_raw.cpp
catkin/pr2lite_moveit_config/: CMakeLists.txt  package.xml
catkin/pr2lite_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ompl_planning.yaml.orig  pr2lite.srdf  pr2lite_arm.yaml  pr2lite_smart_arm.yaml  pr2lite_smart_arm.yaml.alt  pr2lite_smart_arm.yaml.no_11_22  pr2lite_smart_arm.yaml.no_16  pr2lite_smart_arm.yaml.orig  pr2lite_urdf.xml  sensors_kinect.yaml
catkin/pr2lite_moveit_config/kdl_kinematics_plugin.new/: chainiksolver_pos_nr_jl_mimic.cpp.new
catkin/pr2lite_moveit_config/launch/: .base_controller_with_delay.launch.swp  arbotix_arm.launch  base_controller.launch  base_controller_with_delay.launch  fake_moveit_controller_manager.launch.xml  fake_pub.launch  id_server.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  pc_485net_with_delay.launch  planning_pipeline.launch.xml  pr2lite_base_test.launch  pr2lite_bringup.launch  pr2lite_bringup_base_only.launch  pr2lite_bringup_torso.launch  pr2lite_bringup_torso_only.launch  pr2lite_dynamixel.launch  pr2lite_kill  pr2lite_linact_dbg.launch  pr2lite_moveit_sensor_manager.launch.xml  pr2lite_torso_teleop.launch  pr2lite_vision.launch  relax_all_servos.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  tabletop_object_recognition.launch  trajectory_execution.launch.xml  velo_gripper.launch  warehouse.launch
catkin/pr2lite_moveit_config/msg/: packet_485net_dgram.msg
catkin/pr2lite_moveit_config/nodes/: .pr2lite_teleop.py.swp  485net_packet_sorter.py  dynamixel_joint_state_publisher.py  dynamixel_reset_arm_server.py  fake_joints  fake_pub.py  festival_launcher.py  follow_controller_complex.py  follow_controller_simple.py  get_fk.py  id_server.py  net_485net_packet_sorter.py  parallel_gripper_controller.py  pc_485net_joints.py  point_head.py  pr2_tuck_arms_action.py  pr2lite_fakejoint  pr2lite_teleop.py  pr2lite_teleop.py.bck  pr2lite_teleop.py.no_torque_limits  pr2lite_torso_teleop.py  pr2lite_tuck_arms_action.py  sound_utilities.py  test_id_server.py  torso_follow_controller.py  velo_gripper_controller.py
catkin/pr2lite_moveit_config/scripts/: .joy_gripper.py.swp  arm_out  arm_up.py  head_down.py  head_shake.py  joint_state_listener_test.py  odom_out_and_back.py  pr2lite_gripper_test.py
catkin/pr2lite_moveit_config/srv/: SearchID.srv
catkin/prlite_base/: CMakeLists.txt  base_notes  controller.launch  mainpage.dox  manifest.xml  package.xml  stop.sh
catkin/prlite_base/src/: base_controller.cpp
catkin/prlite_odom/: CMakeLists.txt  manifest.xml  package.xml
catkin/prlite_tf/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2lite_actuators/: CMakeLists.txt  manifest.xml~
pr2lite_actuators/config/: pr2lite_actuators.yaml  pr2lite_actuators.yaml~
pr2lite_actuators/include/pr2lite_actuators/: Actuator.hpp~  LinearActuator.hpp
pr2lite_actuators/launch/: linact_server.launch  linact_svr
pr2lite_actuators/nodes/: linact_svr
pr2lite_actuators/src/: linact_server.cpp  linact_type_dynamixel.cpp  linact_type_raw.cpp  linear_actuators.cpp  linear_actuators.cpp~
pr2lite_actuators/src/actuatorlib/: LinearActuator.cpp
pr2lite_nav/: CMakeLists.txt  frames.gv
pr2lite_nav/bag_files/.svn/: all-wcprops  entries
pr2lite_nav/config/: .global_costmap_params.yaml.swp  local_costmap_params.yaml
pr2lite_nav/config/.svn/: all-wcprops  entries
pr2lite_nav/docs/.svn/: entries
pr2lite_nav/include/.svn/: all-wcprops  entries
pr2lite_nav/launch/: .imu.launch.swp  .nav_amcl.launch.swp  gmapping.launch  imu.launch  joystick_teleop.launch  move_base_obstacle.launch  nav_amcl.launch  neato.launch  pi_bringup.launch  pr2lite_bringup  pr2lite_bringup_arm_nav  pr2lite_bringup_base.launch  pr2lite_bringup_orig  robot_pose_ekf.launch  tb_move_base.launch  tb_move_base_blank_map.launch
pr2lite_nav/launch/.svn/: all-wcprops
pr2lite_nav/maps/.svn/: entries
pr2lite_nav/nodes/: arduino_neato.cpp  calibrate_angular.py  calibrate_linear.py  dummy.py  imu_pose.py  imu_um6_node.py  move_base_square.py  nav_square.py  nav_test.py  odom_out_and_back.py  pr2lite_neato.py  timed_out_and_back.py
pr2lite_nav/nodes/.svn/: all-wcprops  dir-prop-base  entries
pr2lite_nav/src/.svn/: all-wcprops
prlite_teleop/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml  notes
prlite_teleop/include/prlite_teleop_general/: prlite_teleop_general_commander.h
prlite_teleop/launch/: SamplesConfig.xml  joy.launch  pr2lite_arm.launch.tmp  pr2lite_base  pr2lite_herpderp  pr2lite_kill  pr2lite_launch  pr2lite_launch2  pr2lite_teleop_nobase  pr2lite_test.launch  prlite_electric.launch  prlite_electric_nobase.launch  prlite_electric_old.launch  prlite_smart_arm.launch  prlite_smart_arm.yaml  prlite_teleop_general_joystick.launch  prlite_teleop_general_joystick_noarm.launch  prlite_teleop_general_joystick_nobase.launch
prlite_teleop/src/: kinect_transform.cpp  kinect_transform.h  prlite_ax12controller.cpp  prlite_ax12controller.h  prlite_teleop_general_commander.cpp  prlite_teleop_general_joystick.cpp
prlite_teleop/src/bck/: arm_commander.cpp  joyarmbridge.cpp  linact.cpp  prlite_ax12controller.cpp  prlite_ax12controller.h  prlite_teleop_general_commander.cpp  prlite_teleop_general_joystick.cpp
prlite_teleop/src/bck3/: prlite_ax12controller.cpp  prlite_ax12controller.h  prlite_teleop_general_commander.cpp  prlite_teleop_general_joystick.cpp
prlite_teleop/tmp/: ax12_to_pr2_state_msgs.py
prlite_urdf/: notes  (+5 more)
(+1177 files in other folders)
