<package>
  <name>prlite_odom</name>
  <version>0.2.0</version>
  <description>
    odometry for pr2lite.
  </description>
  <author>Andrew Downing</author>
  <maintainer email="downingbots@gmail.com">Downingbots</maintainer>
  <license>BSD</license>
  <url>http://mattdowning.wordpress.com</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <license>BSD</license>
  <url>https://github.com/someh4x0r/prlite-pc</url>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>prlite_tf</build_depend>
  <build_depend>pr2lite_moveit_config</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>


</package>

